syntax = "proto3";

package warcraft.character;

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft/character;character";

message Character {
  int64 id = 1;
  string character_id = 2;
  optional string user_id = 3;
  string region = 4;
  string realm = 5;
  string name = 6;
  optional string display_realm = 7;
  optional string display_name = 8;
  optional string gender = 9;
  optional string faction = 10;
  optional string race = 11;
  optional string class = 12;
  optional string spec = 13;
  int64 level = 14;
  int64 item_level = 15;
  optional string guild = 16;
  optional int64 rank = 17;
  optional string old_guild = 18;
  optional string inset = 19;
  optional string avatar = 20;
  int64 mythic = 21;
  optional string raid = 22;
  optional string loggedin_at = 23;
  optional string activated_at = 24;
  string created_at = 25;
  optional string updated_at = 26;
  optional string deleted_at = 27;
}