package handler

import (
	characterpb "github.com/ToxicToast/Azkaban-Go/proto/warcraft/character"
)

func BuildCharacters() []*characterpb.Character {
	return []*characterpb.Character{
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
	}
}
